[package]
name = "overboost"
version = "0.1.0"
authors = ["Altenius <jacobjm18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteordered = "0.5.0"
num = "0.2.1"
thiserror = "1.0"
socketcan = { version = "1.7.0", optional = true }


[features]
default = []

# Enable SocketCAN support
socketcan-datalink = ["socketcan"]